--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-start",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dariakott.github.io/portfolio_new",
   "dependencies": {
     "@babel/core": "7.16.0",
     "@emailjs/browser": "^4.4.1",
